fixing min-width on complete button

--- a/app/globals.css
+++ b/app/globals.css
@@ -192,8 +192,8 @@ body {
   background: rgba(255, 255, 255, 0.1);
   border: none;
   border-radius: 50%;
-  width: 2rem;
-  height: 2rem;
+  min-width: 2rem;
+  min-height: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
