--- a/styles/Header.css
+++ b/styles/Header.css
@@ -3,10 +3,11 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     color: #ffffff;
     border-bottom: 0.5px solid rgba(255, 255, 255, 0.3);
     padding-bottom: 1.5rem;
+    gap: 1rem;
 }
 
 .title {
