--- a/styles/WorkoutView.css
+++ b/styles/WorkoutView.css
@@ -34,6 +34,7 @@
     justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 1.5rem;
+    width: 100%;
 }
 
 .workout-title {
